# drpc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: cli.rs  main.rs
common/: Cargo.toml
common/src/: ipc.rs  lib.rs  log.rs  spotify.rs
common/src/config/: mod.rs  types.rs
daemon/: Cargo.toml
daemon/src/: discord.rs  main.rs  socket.rs  spotify.rs
src/: config.rs  discord.rs  logging.rs  main.rs  parser.rs  processes.rs  spotify.rs
src/config/: mod.rs  structure.rs
src/daemon/: discord.rs  mod.rs  socket.rs
src/parser/: cli.rs  ipc.rs  mod.rs  structure.rs  variables.rs
src_old/: discord.rs  main.rs  processes.rs
src_old/parser/: mod.rs  variables.rs
