[workspace]
members = ["client", "common", "daemon"]
resolver = "2"

[workspace.dependencies]
common = { path = "./common" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable some optimizations in debug mode. Otherwise, it is a pain to test it
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
