[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
ciborium = "0.2.2"
dirs = "5.0.1"
discord-rich-presence = "0.2.4"
log = "0.4.22"
rspotify = { version = "0.13.2", features = ["cli"] }
serde = "1.0.204"
serde_cbor = "0.11.2"
simplelog = "0.12.2"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.16"
