[package]
name = "ddrpc-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
common = { workspace = true }
ctrlc = "3.4.4"
discord-rich-presence = "0.2.4"
rspotify = { version = "0.13.2", features = ["cli"] }
simplelog = "0.12.2"
sysinfo = "0.31.0"
tokio = { version = "1.39.2", features = ["full"] }
warp = "0.3.7"
webbrowser = "1.0.1"
